--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,18 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.3.0
   flutter:
     sdk: flutter
+  flutter_mobx: ^2.1.0
+  flutter_staggered_animations: ^1.1.1
+  font_awesome_flutter: ^10.5.0
+  google_fonts: ^6.1.0
+  http: ^1.1.0
+  intl: ^0.18.1
+  mobx: ^2.2.0
+  provider: ^6.0.5
+  sliding_sheet: ^0.5.2
 
 dev_dependencies:
   flutter_test:
